--- a/Web.Statu/Views/Home/Subjekt2_RegistrSmluv.cshtml
+++ b/Web.Statu/Views/Home/Subjekt2_RegistrSmluv.cshtml
@@ -84,6 +84,7 @@
 
 <div class="head">
     <h3>@Html.KIndexLabelLink(Model.Firma.ICO, 30, linkToKindex: true)@Model.Firma.Jmeno: Registr smluv</h3>
+    <div><a class="btn btn-primary" href="/subjekt2/@Model.Firma.ICO">Zpět na přehled</a></div>
     @WebUtil.CompanySummary(Model.Firma)
 </div>
 <hr />
