--- a/Web.Statu/Views/Data/TechnickeInfo.cshtml
+++ b/Web.Statu/Views/Data/TechnickeInfo.cshtml
@@ -132,7 +132,7 @@
                     <td>Stáhnutí celé databáze</td>
                     <td>Pro stažení použijte naše API. 
                     <br/><br/>
-                    Pokud jste zalogováni, můžete použít i tento odkaz: <a href="https://www.hlidacstatu.cz/api/v1/dump?datatype=dataset.@(Model.DatasetId)">https://www.hlidacstatu.cz/api/v1/dump?datatype=dataset.@(Model.DatasetId)</a></td>
+                    Pokud jste zalogováni, můžete použít i tento odkaz: <a href="https://www.hlidacstatu.cz/api/v2/dump/dataset.@(Model.DatasetId)">https://www.hlidacstatu.cz/api/v2/dump/dataset.@(Model.DatasetId)</a></td>
                 </tr>
                 <tr>
                     <td>Zdrojový kód parseru dat</td>
