--- a/Web.Statu/Views/Data/Detail.cshtml
+++ b/Web.Statu/Views/Data/Detail.cshtml
@@ -89,13 +89,13 @@
             <td>
                 @if (this.Request.IsAuthenticated)
                 {
-                    <a href="https://www.hlidacstatu.cz/api/v1/DatasetItem/@(Model.Dataset.DatasetId)/@(itemId)?nice=1">
-                        https://www.hlidacstatu.cz/api/v1/DatasetItem/@(Model.Dataset.DatasetId)/@(itemId)
+                    <a href="https://www.hlidacstatu.cz/api/v2/datasety/@(Model.Dataset.DatasetId)/zaznamy/@(itemId)">
+                        https://www.hlidacstatu.cz/api/v2/datasety/@(Model.Dataset.DatasetId)/zaznamy/@(itemId)
                     </a>
                 }
                 else
                 {
-                    <code>https://www.hlidacstatu.cz/api/v1/DatasetItem/@(Model.Dataset.DatasetId)/@(itemId)</code>
+                    <code>https://www.hlidacstatu.cz/api/v2/datasety/@(Model.Dataset.DatasetId)/zaznamy/@(itemId)</code>
                 }
                 <br />
                 <a href="/api">Popis API</a>
