--- a/Web.Statu/Views/Subjekt/!vzor.cshtml
+++ b/Web.Statu/Views/Subjekt/!vzor.cshtml
@@ -1,4 +1,4 @@
-﻿@model (HlidacStatu.Lib.Data.Firma Firma, IEnumerable<VerejnaZakazka> Data)
+﻿@model (HlidacStatu.Lib.Data.Firma Firma, List<int> Data)
 
 @using Nest;
 @using HlidacStatu.Web.Framework;
@@ -7,7 +7,7 @@
 @using System;
 @using System.Data;
 @using HlidacStatu.Lib.Render;
-@using HlidacStatu.Lib.Data.VZ;
+
 
 @section breadcrumb
 {
@@ -30,7 +30,7 @@
         $(document).ready(function () {
             $('#datatable').DataTable({
                 "language": {
-                    "info": "Zobrazuji _START_. - _END_. z celkového počtz _TOTAL_ záznamů.",
+                    "info": "Zobrazuji _START_. - _END_. z celkového počtu _TOTAL_ záznamů.",
                     "search": "Hledat:",
                     "lengthMenu": "Zobraz _MENU_ záznamů",
                     "thousands": " ",
@@ -83,7 +83,7 @@
 </style>
 
 <div class="head">
-    <h3>@Html.KIndexLabelLink(Model.Firma.ICO, 30, linkToKindex: true)@Model.Firma.Jmeno: Veřejné zakázky</h3>
+    <h3>@Html.KIndexLabelLink(Model.Firma.ICO, 30, linkToKindex: true)@Model.Firma.Jmeno: Registr smluv</h3>
     <div><a class="btn btn-primary" href="/subjekt2/@Model.Firma.ICO">Zpět na přehled</a></div>
     @WebUtil.CompanySummary(Model.Firma)
 </div>
@@ -91,7 +91,7 @@
 
 <div class="row boxes">
     @* Pravý sloupec *@
-    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, "Subjekt2_RightColumn", Model.Firma, Model.Firma.ICO,
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, "RightColumn", Model.Firma, Model.Firma.ICO,
         this.User.Identity.IsAuthenticated)
 
     @* Prázdný sloupec *@
@@ -99,41 +99,9 @@
     </div>
     @* První sloupec *@
     <div class="col-sm-7 col-sm-pull-5 col-xs-12 col-xs-pull-0">
-        <div>
-            <h4>Veřejné zakázky</h4>
-            @{
-                var resVZdodav = VerejnaZakazka.Searching.SimpleSearch("icododavatel:" + Model.Firma.ICO, null, 1, 0, "1");
-                var resVZzadav = VerejnaZakazka.Searching.SimpleSearch("icozadavatel:" + Model.Firma.ICO, null, 1, 0, "1");
-                Dictionary<string, long> vzakaz = new Dictionary<string, long>();
-                vzakaz.Add("dodavatel|dodavatel|dodavatele|dodavatelem", resVZdodav.Total);
-                vzakaz.Add("zadavatel|zadavatel|zadavatele|zadavatelem", resVZzadav.Total);
 
-                foreach (var kv in vzakaz.OrderByDescending(m => m.Value))
-                {
-                    var text = kv.Key.Split('|');
-                    string surl = WebUtil.GetSearchUrl("/verejnezakazky/hledat", $"ico{text[0]}:" + Model.Firma.ICO);
 
-                    <p>
-                        @Devmasters.TextUtil.ShortenText(Model.Firma.Jmeno, 35)
-                        @Html.Raw(Devmasters.Lang.Plural.GetWithZero((int)kv.Value, $" jsme ve veřejných zakázkach jako {text[2]} nenašli",
-                                             $" se vyskytuje v <a href='{surl}'><b>jedné</b> veřejné zakázce</a> jako {text[1]}", $" se vyskytuje v <a href='{surl}'><b>{{0}}</b> veřejných zakázkách</a> jako {text[1]}", $" se vyskytuje v <a href='{surl}'><b>{{0}}</b> veřejných zakázkach</a> jako {text[1]}")).
-                    </p>
-                }
-            }
 
-            <hr />
-            <h4>Data</h4>
-            @*@{ 
-                var x = Model.Data
-                    .Where(d => d.Zadavatel.ICO == Model.Firma.ICO)
-                    .Select(vz => new { 
-                        vz.DatumUverejneni,
-                        vz.hod
-                    
-                    })
-            }*@
-
-        </div>
 
     </div>
 </div>
