--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -356,7 +356,7 @@
     </div>
     <hr />
     <div>
-        <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistiky odběratelů úřadu</a></h4>
+        <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů úřadu</a></h4>
     </div>
     <hr />
     <div>
