--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -362,6 +362,10 @@
     <div>
         <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">Úřad v dalších databázích</a></h4>
     </div>
+    <hr />
+    <div>
+        <h4><a href="/subjekt2/Sponzoring/@Model.ICO">Sponzoring</a></h4>
+    </div>
 
 </div>
 </div>
