--- a/Web.Statu/Views/Data/_SearchForm.cshtml
+++ b/Web.Statu/Views/Data/_SearchForm.cshtml
@@ -17,8 +17,8 @@
             </div>
             <div class="col-sm-2 col-sm-offset-9 col-xs-12 ">
                 <p>
-                    <a class="form-search__hint pull-right" href="/napoveda">
-                        Jak vyhledávat?
+                    <a style="font-weight:bold" class="form-search__hint pull-right" href="/data/napoveda/@Model.DataSet.DatasetId">
+                        Jak vyhledávat v této databázi?
                     </a>
                 </p>
             </div>
