update list of DS from datoveschranky open data

--- a/Web.Statu/Views/Data/Napoveda.cshtml
+++ b/Web.Statu/Views/Data/Napoveda.cshtml
@@ -7,7 +7,7 @@
 
 @{
     var reg = Model.Registration();
-    ViewBag.Title = $"Nápověda k hledání pro ďatabázi {reg.name}";
+    ViewBag.Title = $"Nápověda k hledání pro databázi {reg.name}";
 
 
 }
