--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -347,24 +347,27 @@
 
     @* ----- Odkazy na další -----*@
 
+    @if (Model.JsemOVM())
+    {
+        <div>
+            <h4><a href="/subjekt2/ObchodySeSponzory/@Model.ICO">Obchody úřadu s firmami navázanými na politiky</a></h4>
+        </div>
+        <hr />
+        <div>
+            <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistika dodavatelů úřadu</a></h4>
+        </div>
+        <hr />
+        <div>
+            <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů úřadu</a></h4>
+        </div>
+        <hr />
+        <div>
+            <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">Úřad v dalších databázích</a></h4>
+        </div>
+        <hr />
+    }
     <div>
-        <h4><a href="/subjekt2/ObchodySeSponzory/@Model.ICO">Obchody úřadu s firmami navázanými na politiky</a></h4>
-    </div>
-    <hr />
-    <div>
-        <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistika dodavatelů úřadu</a></h4>
-    </div>
-    <hr />
-    <div>
-        <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů úřadu</a></h4>
-    </div>
-    <hr />
-    <div>
-        <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">Úřad v dalších databázích</a></h4>
-    </div>
-    <hr />
-    <div>
-        <h4><a href="/subjekt2/Sponzoring/@Model.ICO">Sponzoring</a></h4>
+        <h4><a href="/subjekt2/DalsiInformace/@Model.ICO">Další informace</a></h4>
     </div>
 
 </div>
